<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/Sunday_Breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_gravity="center_horizontal" />


    <CheckBox

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Breakfast_Toast"
        android:text="@string/Toast"
    android:onClick="selectItem"
    />

    <CheckBox

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Breakfast_Egg"
        android:text="@string/Egg"
    android:onClick="selectItem"
    />

    <CheckBox

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Breakfast_Fruits"
        android:text="@string/Fruits"
    android:onClick="selectItem"
    />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center"
        android:onClick="finalSelection"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_result"
        android:text="@string/selected"
     />




</LinearLayout>